<resources>
    <string name="app_name">Event Notifier</string>
    <string name="current_date">Current Date</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="empty" />
    <string name="upcoming_events">Upcoming Events</string>
    <string name="user_settings">User Settings</string>
    <string name="calendar">Calendar</string>
    <string name="save_event">Save Event</string>
    <string name="event">Event</string>
    <string name="event_title">Event Title</string>
    <string name="add_a_location">Add a location</string>
    <string name="add_people">Add People</string>
    <string name="add">Add</string>
    <string name="add_from_contacts">Add From Contacts</string>
    <string name="add_your_notes">Add your notes</string>
    <string name="date">Date</string>
    <string name="_06_apr_2020">06-Apr-2020</string>
    <string name="time">Time</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="duration_0_hours_0_minutes">DURATION: 0 HOURS 0 MINUTES</string>
    <string name="events">Events</string>
    <string name="add_event">Add Event</string>
    <string name="no_event_to_display">No event to display!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="note_color">Note Color</string>
    <string name="send_mail">Send mail</string>
    <string name="week">Week</string>
    <string name="next_seven_days">Next 7 days</string>
    <string name="period">Period</string>
    <string name="today">Today</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="next_30_days">Next 30 days</string>
    <string name="all_events">All Events</string>
    <string name="notification_preference">Notification Preference</string>
    <string name="_10_minutes_before">10 minutes before</string>
    <string name="_1_hour_before">1 hour before</string>
    <string name="_1_day_before">1 day before</string>
    <string name="at_the_time_of_event">At the time of event</string>
    <string name="back">BACK</string>
    <string name="share">Share</string>
    <string name="mail">Mail</string>
    <string name="ok">OK</string>
    <string name="one_time_event">One-time event</string>
    <string name="add_notification">Add Notification</string>
    <string name="repetition">Repetition</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="yearly">Yearly</string>
    <string name="one_time">One-Time</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Istanbul, Turkey</string>
    <string name="default_info_snippet">Current Location</string>
    <string name="select_this_location">Select this location</string>
    <string name="default_ringtone">Ringtone</string>
    <string name="default_reminder_time">Reminder Time</string>
    <string name="default_reminder_frequency">Reminder Frequency</string>
    <string name="app_theme">App Theme</string>
    <string name="dark">Dark</string>
    <string name="indigo">Indigo</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="ringtone">Ringtone</string>
    <string name="consequence">Consequence</string>
    <string name="juntos">Juntos</string>
    <string name="piece_of_cake">Piece of cake</string>
    <string name="point_blank">Point blank</string>
    <string name="slow_spring_board">Slow spring board</string>
    <string name="notifications">Notifications</string>
    <string name="don_t_forget_to_buy_a_gift">Don\'t forget to buy a gift</string>
    <string name="location">Location</string>
    <string name="event_details">Event Details</string>
</resources>
