<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/AlertDialogLayout_Repeat_TextView_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/mainColor"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/repetition"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/AlertDialogLayout_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/AlertDialogLayout_Repeat_RadioButton_OneTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_time"
                android:textColorLink="@color/darkIndigo"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/AlertDialogLayout_Repeat_RadioButton_Daily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:textColorLink="@color/darkIndigo"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/AlertDialogLayout_Repeat_RadioButton_Weekly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weekly"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/AlertDialogLayout_Repeat_RadioButton_Monthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monthly"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/AlertDialogLayout_Repeat_RadioButton_Yearly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yearly"
                android:textSize="18sp" />
        </RadioGroup>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/AlertDialogLayout_Button_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textColor="@color/darkIndigo"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>