<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/AlertDialogLayout_AppTheme_TextView_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/mainColor"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/choose_theme"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/AlertDialogLayout_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/AlertDialogLayout_RadioButton_Indigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indigo"
                android:textColorLink="@color/darkIndigo"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/AlertDialogLayout_RadioButton_Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark"
                android:textSize="18sp" />

        </RadioGroup>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/AlertDialogLayout_Button_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textColor="@color/darkIndigo"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>